force-app/main/default/objects/MUSW__Request__c/MUSW__Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>