force-app/main/default/objects/MUSW__Request__c/fields/MUSW__Close_Action__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Close_Action__c</fullName>
    <label>Completed Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>