force-app/main/default/objects/MUSW__Request__c/fields/MUSW__Permit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>