force-app/main/default/objects/MUSW__Request__c/fields/MUSW__Reason__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Reason__c</fullName>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>