force-app/main/default/objects/MUSW__Request__c/fields/MUSW__Requested_By__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests as Requested By</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>