force-app/main/default/objects/MUSW__Request__c/recordTypes/MUSW__Permit_Service_Request.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Service_Request</fullName>
    <active>true</active>
    <label>Permit Service Request</label>
</RecordType>