force-app/main/default/objects/MUSW__Request__c/listViews/clariti__Online_All_Requests.listView-meta.xml
<ListView>
    <fullName>clariti__Online_All_Requests</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>MUSW__Requested_By__c</columns>
    <filterScope>Mine</filterScope>
    <label>Online All Requests</label>
</ListView>