force-app/main/default/objects/MUSW__Request__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Permit__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MUSW__Requested_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>