force-app/main/default/objects/MUSW__Request__c/listViews/MUSW__Pending_Reviews.listView-meta.xml
<ListView>
    <fullName>MUSW__Pending_Reviews</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Permit__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MUSW__Requested_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>MUSW__Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Pending Reviews</label>
</ListView>