force-app/main/default/objects/MUSW__Request__c/listViews/MUSW__Request_Queue_Default.listView-meta.xml
<ListView>
    <fullName>MUSW__Request_Queue_Default</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Requested_By__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Request Queue Default</label>
</ListView>