force-app/main/default/objects/MUSW__Request__c/listViews/Request_Queue_Request.listView-meta.xml
<ListView>
    <fullName>Request_Queue_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Request Queue</label>
    <queue>Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>